--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
+*{
+  transition-duration: 0.3s;
+  font-family: "Expletus Sans";
+}
+
 html, body{
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-  overflow: hidden;
+
+  position: relative;
+  z-index: 0;
+}
+
+div{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 h1{
