--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 *{
-  transition-duration: 0.3s;
   font-family: "Expletus Sans";
+}
+
+.main-container{
+  transition-duration: 0.3s;
 }
 
 html, body{
